@@ -1,4 +1,6 @@
 ---
+* [TALOS-CAN-0062] prevent directory traversal for VMS, too, when
+  using 'saveconfig' command.  perlinger@ntp.org
 * [TALOS-CAN-0064] signed/unsiged clash could lead to buffer overun
   and memory corruption. perlinger@ntp.org
 * [Bug 2332] (reopened) Exercise thread cancellation once before dropping
